<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <Button
        android:id="@+id/chargeSuccessToActionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chargeSuccessText"
        android:layout_alignStart="@+id/chargeSuccessText"
        android:layout_below="@+id/chargeSuccessEmailText"
        android:layout_marginTop="50dp"
        android:text="Back to Customer Actions"/>

    <TextView
        android:id="@+id/chargeSuccessAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chargeSuccessText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="$1.00"
...
