...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/scanCreditCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="38dp"
...
            android:layout_toLeftOf="@+id/expDate"
            android:layout_toStartOf="@+id/expDate"
            android:text="Security Code"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Button
            android:id="@+id/processPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/scanCreditCard"
            android:layout_alignStart="@+id/scanCreditCard"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="34dp"
...
            android:layout_toEndOf="@+id/textView6"
            android:layout_toRightOf="@+id/textView6"
            android:inputType="none"
            android:text="                                      "/>

        <TextView
            android:id="@+id/transactionFailure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/processPayment"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="Error Message Area"
...
